# ops-toolkit

./: pyproject.toml  update.sh
.github/workflows/: check_linting.yaml
bash_scripts/: exit_code.sh  exit_codes_v3.sh  install_command_v2.sh
bash_scripts/github/: delete_deployments.sh  find_deployments.sh
bash_scripts/youtube_course/: exit_codes_v2.sh  forloop.sh  install_command.sh  myfile.sh  setvars.sh  while_loop.sh
python_scripts/: bad_formatted_code.py
python_scripts/automation/: github_deployments.py
